# hausio-vscode-precommit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  run_black.py  run_flake8.py  run_isort.py
hausio_vscode_precommit/src/: run_black.py  run_flake8.py  run_isort.py
